# DejaQ-server

./: .gitignore  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  README.md  index.html  pyproject.toml  start.sh  test.md
enricher-test/: pyproject.toml
enricher-test/configs/: baseline_qwen_0_5b.py  v2_regex_gate.py  v3_improved_fewshots.py  v4_gate_fix.py  v5_qwen_1_5b.py
enricher-test/dataset/: conversations.json  conversations_coding.json  conversations_culture.json  conversations_practical.json  conversations_science.json
enricher-test/harness/: embedder.py  metrics.py  report.py  runner.py
enricher-test/reports/20260413-104630/: baseline_qwen_0_5b_raw.json  report.csv  report.md
enricher-test/reports/20260413-110033/: baseline_qwen_0_5b_raw.json  report.csv  report.md  v2_regex_gate_raw.json
enricher-test/reports/dry_run/: report.csv  report.md
normalization-test/: .gitignore  README.md  pyproject.toml
normalization-test/configs/: baseline_qwen_0_5b.py  v0_raw_passthrough.py  v10_universal_gemma_e2b.py  v11_grammar_universal_gemma_e2b.py  v12_hybrid_rules_gemma_e2b.py  v13_finetuned_embedder.py  v13b_mpnet_finetuned.py  v14_structured_intent.py  v15_rules_plus_finetune.py  v2_bag_qwen_0_5b.py  v3_bag_gemma_e2b.py  v4_bag_with_intent_qwen_0_5b.py  v5_bag_with_intent_gemma_e2b.py  v6_refined_intent_gemma_e2b.py  v7_comprehensive_gemma_e2b.py  v8_almost_perfect_gemma_e2b.py  v9_targeted_gemma_e2b.py
normalization-test/dataset/: prompts.json
normalization-test/harness/: embedder.py  metrics.py  report.py  runner.py
normalization-test/training/: finetune_embedder.py  synthetic_paraphrases.json
server/: .env.example  .gitignore  README.md  index.html  pyproject.toml  start.sh
server/alembic/: env.py
server/alembic/versions/: 4768d0a3e5b4_add_api_keys_table.py  9f2a1d7c8b31_add_org_llm_config.py  a1b2c3d4e5f6_add_users_and_user_org_memberships.py  c3d4e5f6a7b8_add_org_provider_credentials.py
server/app/: config.py  main.py
server/app/db/: api_key_repo.py  base.py  credential_repo.py  dept_repo.py  llm_config_repo.py  org_repo.py  slug.py  user_repo.py
server/app/dependencies/: admin_auth.py  auth.py  management_auth.py
server/app/middleware/: api_key.py
server/app/routers/: chat.py  departments.py  feedback.py  (+1 more)
server/cli/: admin.py  seed.py  stats.py  tui.py
server/docs/: qa_cowork_prompt.md
server/scripts/: benchmark_backend_concurrency.py  load_test_mixed_chat_requests.py  start.sh
server/tests/: conftest.py  test_admin_api_basic.py  test_admin_api_resources.py  test_admin_async_safety.py  test_admin_auth.py  test_admin_route_boundaries.py  test_admin_schemas.py  test_admin_service.py  test_admin_user_actor_scoping.py  test_cli_admin_service_parity.py  test_cli_api_parity.py  test_context_adjuster.py  test_context_enricher.py  test_credentials_service.py  test_demo_seed.py  test_feedback_service.py  test_llm_config_service.py  test_llm_router.py  test_logger.py  test_memory_chromadb.py  test_model_backends.py  test_normalizer.py  test_openai_compat_smoke.py  test_provider_clients_contract.py  test_provider_clients_logging.py  test_provider_inference.py  test_request_logger.py  test_start_script.py  test_stats_service.py
validator-test/: .gitignore  pyproject.toml
validator-test/configs/: gemma_e2b.py  heuristic_only.py  heuristic_only_strict.py  phi_3_5_mini.py  qwen_0_5b.py  qwen_1_5b.py  qwen_1_5b_prefilter.py
validator-test/dataset/: pairs.json  pairs_culture.json  pairs_history.json  pairs_science.json  pairs_tech.json
validator-test/harness/: metrics.py  parser.py  prefilter.py  report.py  runner.py
validator-test/scripts/: pipeline_latency.py
(+391 files in other folders)
