[project]
name = "dejaq-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.129.0",
    "huggingface-hub>=1.4.1",
    "llama-cpp-python>=0.3.20",
    "llmlingua>=0.2.2",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "chromadb>=0.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.0.0",
    "pyspellchecker>=0.9.0",
    "openai>=2.31.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "click>=8.3.2",
    "rich>=14.3.3",
    "textual>=8.2.3",
    "aiosqlite>=0.22.1",
]

[project.scripts]
dejaq-admin = "cli.admin:cli"
dejaq-admin-tui = "cli.tui:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[dependency-groups]
test = ["pytest>=8.0", "pytest-html>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=test_reports/report.html --self-contained-html -v"
markers = [
    "no_model: no ML model needed",
    "qwen: requires Qwen 0.5B",
    "qwen_1_5b: requires Qwen 1.5B",
    "phi: requires Phi-3.5 Mini",
    "llama: requires Gemma 4 26B A4B",
    "deberta: requires NVIDIA DeBERTa",
]
